--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Import series styles */
+@import './series-page.css';
+
 .task-list-item::before {
   @apply hidden;
 }
